<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/primary_color"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search_products"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/hint_search_products"
            android:inputType="text"
            android:autofillHints="username"
            android:importantForAutofill="yes"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@drawable/search_background"
            android:textSize="16sp"
            android:textColorHint="@color/gray_medium"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="end" />

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            app:tint="@android:color/white"
            app:srcCompat="@drawable/ic_search"
            android:contentDescription="@string/cd_search_button" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_admin_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="70dp"
        android:clipToPadding="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchorGravity="bottom|end"
        app:backgroundTint="@color/primary_color"
        app:tint="@android:color/white"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/cd_add_product" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>